# localman

./: .gitignore  Cargo.toml  README.md  fix-eondcms.sh  install-sudoers.sh  run.sh
docs/: linux-single-instance-and-dock-icon.md
src/: main.rs
src/system/: database.rs  mod.rs  service.rs  vhost.rs
src/ui/: database.rs  mod.rs  projects.rs  services.rs
